Fixed critical vertical height clipping bug. Replaced placeholder image for small screens

--- a/css/prototype.css
+++ b/css/prototype.css
@@ -826,7 +826,8 @@ a[href$=".pdf"]::after {
 
 .small-screens .small-screens-container {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+  flex-grow: 1;
 
   display: flex;
   flex-direction: column;
@@ -841,8 +842,9 @@ a[href$=".pdf"]::after {
 }
 
 .small-screens img {
-  max-width: 100%;
-  margin-bottom: 4em;
+    max-width: 340px;
+    margin-bottom: 4em;
+    filter: hue-rotate(80deg);
 }
 
 .small-screens h2 {
@@ -871,6 +873,63 @@ a[href$=".pdf"]::after {
   justify-content: center;
   border-radius: 4px;
   margin-top: 2em;
+}
+
+.scenario_buttons {
+  display: flex;
+}
+
+.evaluation .scenario_question {
+  font-weight: 600;
+  font-family: 'Sen';
+  color: #333;
+  margin-bottom: 0;
+  text-align: center;
+}
+
+.scenario_indicator {
+  background-color: #f2f1ff;
+  padding: 2em;
+  box-sizing: border-box;
+  margin-top: 2em;
+  border-radius: 4px;
+  overflow: hidden;
+
+  /* Animated values */
+  display: none;
+  height: 0;
+  opacity: 0;
+  transition: height 350ms ease-in-out, opacity 750ms ease-in-out;
+}
+
+.gui_form {
+  display: none;
+  height: 0;
+  opacity: 0;
+  transition: height 350ms ease-in-out, opacity 750ms ease-in-out;
+
+}
+
+.form_section i {
+  font-style: italic;
+}
+
+.form_section b {
+  font-weight: bold;
+}
+
+.conditional p {
+  margin-bottom: 1em;
+}
+
+.conditional p:last-child {
+  margin-bottom: 0;
+}
+
+.is-visible {
+  display: block;
+  height: auto;
+  opacity: 1;
 }
 
 @media only screen and (max-width: 840px) {
